--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
@@ -11,12 +11,12 @@
 
 <p>
 Card Number: <input type="number" id="cardNumber" value="00000000000000">
-<button type="button" onclick="submitCardNumber()">Submit</button>
+  <button type="button" onclick="submitCardNumber()">Submit</button><b> Type your card number in here</b>
 </p>
 
 <p>
   Image: <input type="url" id="userImage" value="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg">
-  <button type="button" onclick="submitUserImage()">Submit</button>
+  <button type="button" onclick="submitUserImage()">Submit</button><b> Put an image link here or use the provided one</b>
 </p>
 
 <div class="mover">
@@ -25,8 +25,6 @@ Card Number: <input type="number" id="cardNumber" value="00000000000000">
   <img class="barcode" id="bc" src="https://www.barcodesinc.com/generator/image.php?code=00000000000000&style=197&type=C128B&width=250&height=60&xres=1&font=3" alt="barcode"/>
  </div>
 </div>
-
-
 
 </body>
 
