--- a/index.html
+++ b/index.html
@@ -1,27 +1,17 @@
-
+<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Library Card Maker</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>One Eternity Later</title>
   </head>
+<html> 
 
-
-<html>
 <body>
 
-<p>
-Card Number: <input type="number" id="cardNumber" value="00000000000000">
-<button type="button" onclick="submitCardNumber()">Submit</button>
-</p>
-
-<div class="container">
-  <img class="image1" src="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg" alt="arthur library card"/>
-  <img class="image2" id="bc" src="https://www.barcodesinc.com/generator/image.php?code=00000000000000&style=197&type=C128B&width=250&height=60&xres=1&font=3"/>
-</div>
+    <img id="image" src="oneEternityLater.jpg">
 
 </body>
 
 <script src="script.js"></script>
- 
+
 </html>
