--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
+<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
   <title>Library Card Maker</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.3/dist/JsBarcode.all.min.js"></script>
   </head>
-
 
 <html>
 <body>
@@ -15,13 +16,26 @@ Card Number: <input type="number" id="cardNumber" value="00000000000000">
 <button type="button" onclick="submitCardNumber()">Submit</button>
 </p>
 
-<div class="container">
-  <img class="image1" src="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg" alt="arthur library card"/>
-  <img class="image2" id="bc" src="https://www.barcodesinc.com/generator/image.php?code=00000000000000&style=197&type=C128B&width=250&height=60&xres=1&font=3"/>
+<p>
+  Image: <input type="url" id="userImage" value="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg">
+  <button type="button" onclick="submitUserImage()">Submit</button>
+</p>
+
+<div class="mover">
+  <img class="cardImage" id="ui" src="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg" width="322px" height="209px" alt="library card background image"/>
+
+  <div class="barcode"">
+    <svg id="bc"></svg>
+  </div>
+
+</div>
+
+<div class="link">
+  <p> <button type="button" onclick="setBroken()">Click here if this is broken again</button></p>
+  <p> <img src="angryArthur.jpg" width="50px" height="50px" alt="angry arthur"/> </p>
+
 </div>
 
 </body>
 
-<script src="script.js"></script>
- 
 </html>
