--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@ Card Number: <input type="number" id="cardNumber" value="00000000000000">
   <img class="cardImage" id="ui" src="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg" width="322px" height="206px" alt="library card background image"/>
 <!----    <div class="barcodeContainer" id="bcContainer"> -->
       <div class="barcode" id="barcode">
-        <p style="font-family: barcode; font-size: 45px; line-height: 50px;" id="bc">00000000000000</p>  
+        <p style="font-family: Barcode; font-size: 45px; line-height: 50px;" id="bc">00000000000000</p>  
         <div id="bc#">
-          <p style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; margin-top: -60px; text-align: center;"><span id="bcnum">00000 </span><span id="mid"> 00000</span>
+          <p style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; margin-top: -60px; text-align: center;">
+            <span id="bcnum">00000 </span><span id="mid"> 00000</span>
             <span id="bold" style="font-size: 15px; font-weight: bold;"> 0000</span> </p>
         </div> 
       </div>
