--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 <p>
-Card Number: <input type="number" id="cardNumber" value="00000000000000">
+Your card number: <input type="number" id="cardNumber" value="00000000000000">
 <button type="button" onclick="submitCardNumber()">Submit</button>
 </p>
 
 <p>
-  Image: <input type="url" id="userImage" value="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg">
+  Paste image url here: <input type="url" id="userImage" value="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg">
   <button type="button" onclick="submitUserImage()">Submit</button>
 </p>
 
