--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@ bc.addEventListener('mousedown', mouseDown);
 addEventListener('mouseup', mouseUp);
 addEventListener('mousemove', mouseMove);
 
+window.onload = function() {
+  bc.addEventListener('touchmove', function(e) {
+  var touch = e.targetTouches[0];
+  bc.style.left = touch.pageX - 200 + 'px';
+  bc.style.top = touch.pageY - 150 + 'px';
+   console.log(touch.pageX + ' - ' + touch.pageY);
+}, false);
+}
+
 function mouseDown(e) {
   clickOnBC = true;
   e.preventDefault();
