--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="section-to-print" class="convertable-toPng">
 <div id="printElement">
 <div class="cardImage" id="card">
-    <img class="cardImage" id="ui" src="https://static.wikia.nocookie.net/arthur/images/4/47/Arthur_2_Song.jpg/revision/latest/scale-to-width-down/340?cb=20120518234116" width="322px" height="206px" alt="library card background image"/>
+    <img class="cardImage" id="ui" src="images/arthur.jpg" width="322px" height="206px" alt="library card background image"/>
         <div class="barcode" id="barcode">
           <img id="barcode2"/>
             <div id="bc#">
@@ -50,12 +50,11 @@
 
 <div class="notes">
   <p>notes:</p>
-  <p>v10 (feb 15 2021)</p>
+  <p>v11 (feb 20 2021)</p>
   <p> - barcodes generated with <a href="https://github.com/lindell/JsBarcode" target="_blank">jsbarcode library </a> </p>
   <p> - print function uses <a href="https://html2canvas.hertzen.com/" target="_blank">html2canvas </a></p>
   <p> - uses CODE128 style barcodes. libraries are supposed to use Codabar format, but I couldn't get them to scan??</p>
   <p>to do: uploading images? (probably not going to do this)</p>
-  <p>to do: fix ios drag barcode movement</p>
   <p> - if you want to help, get in touch! g9f605++@++hot++mail++dot++calm</p>
 </div>
 
