--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="section-to-print" class="convertable-toPng">
 <div id="printElement">
 <div class="cardImage" id="card">
-    <img class="cardImage" id="ui" src="images/arthur.jpg" width="322px" height="206px" alt="library card background image"/>
+    <img class="cardImage" id="ui" src="arthur.WEBP" width="322px" height="206px" alt="library card background image"/>
         <div class="barcode" id="barcode">
           <img id="barcode2"/>
             <div id="bc#">
