--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="barcode" id="barcode">
           <img id="barcode2"/>
             <div id="bc#">
-              <p style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; margin-top: -15px; text-align: centre;">
+              <p style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; margin-top: -15px; margin-left: -10px; text-align: centre;">
                 <span id="bcnum">00000 </span><span id="mid"> 00000</span>
                 <span id="bold" style="font-size: 15px; font-weight: bold;"> 0000</span> </p>
             </div> 
